# cloud

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  BUILD  CMakeLists.txt  Dockerfile  README.md  WORKSPACE
cmake/: README.md  build.cmake  depends.cmake
cmake/modules/: FindGRPC.cmake
cpp/: install_dependencies.sh  make_build.sh  make_install.sh  make_test.sh
cpp/analyzers/: BUILD  analyzer_interface.h  analyzer_service.h
cpp/analyzers/word_count/: BUILD
cpp/analyzers/word_count/lib/: BUILD  analyzer.cc  analyzer.h  word_count_analyzer.cc  word_count_analyzer.h
cpp/analyzers/word_count/server/: BUILD  server.cc  word_count_analyzer_server.cpp
cpp/analyzers/word_count/test/: BUILD  (+2 more)
cpp/hello/lib/: BUILD  hello_time.cc
cpp/hello/main/: BUILD  hello_greet.cc  hello_world.cc
cpp/include/utils/: protobuf_formatter.h  protobuf_stream.h
cpp/src/: CMakeLists.txt
cpp/src/analyzer_client/: CMakeLists.txt  main.cpp
cpp/src/analyzers/: CMakeLists.txt
cpp/src/analyzers/word_count/test/: CMakeLists.txt  test_word_count_analyzer.cpp
cpp/tools/: CMakeLists.txt
cpp/tools/analyzer_client/: BUILD  analyzer_client.cc
cpp/tools/protobuf_reader/: BUILD  protobuf_reader.cc
cpp/utils/: BUILD  server_base.h
doc/: config.txt
doc/html/: _analyzer_service_8grpc_8pb_8h_source.html  analyzer__service_8h_source.html  classcloud_1_1_analyzer_service.html  classcloud_1_1_server.html  classcloud_1_1_unique_inputs_counter.html  classcloud_1_1utils_1_1_input_protobuf_stream.html  classcloud_1_1utils_1_1_output_protobuf_stream.html  classcloud_1_1utils_1_1_protobuf_formatter.html  classes.html  classpb_1_1_analyzer.html  classpb_1_1_analyzer_1_1_stub.html  classpb_1_1_analyzer_input.html  classpb_1_1_analyzer_input_default_type_internal.html  classpb_1_1_analyzer_output___category.html  classpb_1_1_analyzer_output_default_type_internal.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_55415b25dbb0ac83a36403d77bc56a69.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_bd1bf519644fadfdc1ba73753ca01126.html  dir_cb55a6a65aaefb7a615170a94128af33.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_f7b6b458ece01047575099a1da91ebe5.html  functions.html  hierarchy.html  index.html  server_8h_source.html  structcloud_1_1_unique_inputs_counter_1_1_result.html  unique__inputs__counter_8h_source.html
doc/html/search/: all_1.js  all_3.js  all_7.js  classes_0.js  classes_1.js  classes_4.js  classes_6.js  functions_0.js  functions_4.js  functions_7.js  functions_8.js  searchdata.js
docker/: README.md  build.sh  build_bin.sh  build_env.sh  run.sh  stop.sh
docker/cpp/env/: Dockerfile  make.sh
docker/env/: Dockerfile  make.sh
docker/go/env/: Dockerfile  make.sh
docs/: architecture.md  architecture.txt  config.txt
docs/html/: _analyzer_service_8pb_8h_source.html  annotated.html  classcloud_1_1_analyzer_client.html  classcloud_1_1_unique_inputs_count_analyzer.html  classcloud_1_1_unique_inputs_counter_test.html  classpb_1_1_analyzer_1_1_service.html  classpb_1_1_analyzer_1_1_stub_interface.html  classpb_1_1_analyzer_1_1_with_async_method__analyze.html  classpb_1_1_analyzer_1_1_with_generic_method__analyze.html  classpb_1_1_analyzer_1_1_with_streamed_unary_method__analyze.html  classpb_1_1_analyzer_output.html  classpb_1_1_analyzer_output___category_default_type_internal.html  dir_0d609889f48143c506ca296655b6b544.html  dir_1322b08c1f3cb6f46884189d81035a70.html  dir_1563a38af0d3a5e4a6330d6d45e9792a.html  dir_232d1ba95267d909e376bbcec5ccc092.html  dir_92ec18c1bafdedda8c7a91ea4a88d446.html  dir_95e1f58c51137e1bdc903b9432692cd2.html  dir_9d9abe12970fa14815a7ef1ca170edd2.html  dir_b06acd420e8cbf059a93a756bca34fac.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions_func.html  lexical__cast_8h_source.html  md__r_e_a_d_m_e.html  pages.html  protobuf__formatter_8h_source.html  protobuf__stream_8h_source.html  service_8h_source.html  structpb_1_1protobuf___analyzer_service__2eproto_1_1_static_descriptor_initializer.html  structpb_1_1protobuf___analyzer_service__2eproto_1_1_table_struct.html
docs/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_9.js  classes_2.js  classes_5.js  classes_7.js  classes_8.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js
examples/: CMakeLists.txt
examples/analyzers/: CMakeLists.txt
examples/analyzers/unique_inputs_count/: CMakeLists.txt
examples/analyzers/unique_inputs_count/lib/: CMakeLists.txt  unique_inputs_counter.h
examples/analyzers/unique_inputs_count/test/: CMakeLists.txt
examples/analyzers/unique_inputs_counter/server/: CMakeLists.txt  main.cpp  service.h
examples/inputs_count_analyzer/: CMakeLists.txt
examples/inputs_count_analyzer/lib/: CMakeLists.txt  inputs_count_model.cpp  inputs_count_model.h
examples/inputs_count_analyzer/server/: CMakeLists.txt  main.cpp  service.h
examples/inputs_count_analyzer/test/: CMakeLists.txt
go/: install_dependencies.sh  make_build.sh  make_test.sh  utils.go  utils_test.go
go/frontend/: BUILD  main.go
go/request_handler/: BUILD  main.go
go/src/frontend/: main.go  utils.go
include/: analyzer_service.h  server.h
include/utils/: lexical_cast.h  protobuf_formatter.h  protobuf_stream.h
protobuf/: AnalyzerService.proto  BUILD  CMakeLists.txt  README.md  analyzer_service.proto
shell/: build_pipeline.sh  env.sh  environments.sh  install_bazel.sh  install_dependencies.sh
shell/cpp/: make_build.sh  make_test.sh
shell/go/: install_dependencies.sh  make_install.sh  make_test.sh
src/: CMakeLists.txt
src/analyzer_client/: CMakeLists.txt  main.cpp
src/analyzers/: CMakeLists.txt
src/analyzers/client/: CMakeLists.txt  main.cpp
src/analyzers/example/server/: CMakeLists.txt  main.cpp  service.h
src/client/: CMakeLists.txt
src/server/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/tools/protobuf_generator/: CMakeLists.txt  main.cpp
src/tools/protobuf_reader/: main.cpp
src/tools/protobuf_writer/: CMakeLists.txt  main.cpp
(+10 files in other folders)
